irv: avoid overlapping mapInfo div with widget buttons and keep it invisible until any feature is selected

--- a/openquakeplatform/openquakeplatform/irv/static/irv/css/irv_legend.css
+++ b/openquakeplatform/openquakeplatform/irv/static/irv/css/irv_legend.css
@@ -7,10 +7,12 @@
 
 #mapInfo {
     position: fixed;
+    margin-top: 40px;
     right: 20px;
     padding: 10px 10px 15px;
     background-color: whitesmoke;
     border-radius: 15px;
+    visibility: hidden;
 }
 
 .my-legend .legend-title {
